--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 
 [tox]
-envlist = py27, py34, py35, py27-coverage, py27-flake8
+envlist = py26, py27, py34, py35, py27-coverage, py27-flake8
 skip_missing_interpreters = true
 
 [flake8]
@@ -18,7 +18,9 @@ max-complexity = 12
 deps =
     -r{toxinidir}/test_requirements.txt
 commands =
-    {envpython} -m unittest discover
+    unit2 discover
+
+#-m unittest discover
 
 [testenv:py27-coverage]
 basepython =
